--- a/ordinacijaAngular/package.json
+++ b/ordinacijaAngular/package.json
@@ -20,13 +20,16 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "alertifyjs": "^1.11.2",
     "bootstrap": "^4.1.3",
+    "bootswatch": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "ng-fullcalendar": "^1.7.0",
+    "ngx-bootstrap": "^3.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
